Wed Sep  9 21:20:49 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_data_type): typed.

	* ext/dl/cfunc.c (dlcfunc_data_type): typed.

	* ext/dl/cptr.c (dlptr_data_type): ditto.

	* ext/dl/handle.c (dlhandle_data_type): ditto.

Wed Sep  9 17:17:31 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (parser_regx_options): only one kcode should effect
	  options [ruby-core:25411]

Wed Sep  9 15:46:28 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (rb_feature_provided): fixed for autoloading extension
	  library without suffix.

Wed Sep  9 15:24:32 2009  TAKANO Mitsuhiro (takano32)  <tak@no32.tk>

	* include/ruby/st.h : revert previous commit.

	* ext/objspace/objspace.c : remove st_memsize declare.

Wed Sep  9 14:07:19 2009  TAKANO Mitsuhiro (takano32)  <tak@no32.tk>

	* include/ruby/st.h : fix duplicate st_memsize declare.

Wed Sep  9 13:33:11 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_autoload): initialize typed data.

Wed Sep  9 13:10:41 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* st.c (st_free_table): constified.

Wed Sep  9 13:09:07 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (dir_data_type): typed.

	* enumerator.c (enumerator_data_type): typed.
	  (yielder_data_type, generator_data_type): ditto.

	* error.c (name_err_mesg_data_type): typed.

	* file.c (stat_data_type): typed.

	* thread.c (thgroup_data_type, mutex_data_type, barrier_data_type):
	  typed.

	* time.c (time_data_type): typed.

	* transcode.c (econv_data_type): typed.

	* variable.c (autoload_data_type): typed.

Wed Sep  9 11:11:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_data_type_struct): constified dsize.

Wed Sep  9 11:07:48 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cont.c (cont_memsize): fixed wrong expression on IA64.

Wed Sep  9 10:51:46 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cont.c (cont_restore_1, rb_cont_call): should be Fiber.
